src/App.css
.App {
  text-align: center;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.playingRectangle {
  width: 300px;
  height: 500px;
  background-color: white;
  position: relative;
  border: 2px solid black;
  border-radius: 35px;
}

.dot {
  background-color: darkgreen;
  color: white;
  width: 70px;
  height: 70px;
  border-radius: 35px;
}

.dotBop {
  position: absolute;
}

.playingRectangle.simon {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.simonRow {
  display: flex;
  justify-content: center;
  gap: 10px;
}

.dotSimon {
  position: relative;
  border: 2px solid rgb(44, 44, 44);
}

.testButton {
  background-color: black;
  color: white;
  padding: 10px;
  margin: 10px;
}

.centerLine {
  position: absolute;
  top: 250px;
  width: 99.3%;
  height: 0px;
  border: 1px solid black;
}

.modeButton {
  background-color: black;
  color: white;
}

.gameLobby {
  color: white;
  background-color: #282c34;
  width: 80%;
  height: auto;
  margin: 70px auto;
  border-radius: 35px;
  border: 2px solid black;
  padding: 10px;
}

.gameLobbyTitle {
  margin-top: 0px;
  margin-bottom: 20px;
  font-size: 3rem;
}

.startButton {
  font-size: 2rem;
}

.scoreBoard {
  display: flex;
  gap: 20px;
}

